--- a/app/src/main/res/drawable-anydpi/ic_diff_three.xml
+++ b/app/src/main/res/drawable-anydpi/ic_diff_three.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#E57700"
+    android:tint="@android:color/holo_green_dark"
     android:alpha="0.8">
   <path
       android:fillColor="@android:color/white"
