--- a/app/src/main/res/drawable/round_borders.xml
+++ b/app/src/main/res/drawable/round_borders.xml
@@ -3,7 +3,7 @@
         <shape android:shape="rectangle"  >
             <corners android:radius="50dip" />
             <stroke android:width="1dp" android:color="@color/black" />
-            <solid android:color="@android:color/holo_orange_dark" />
+            <solid android:color="@android:color/holo_green_dark" />
 
 
             <!--<gradient android:angle="-90" android:startColor="#DD2C00" android:endColor="#FFAB00" />-->
