--- a/app/src/main/res/layout-land/activity_choose_difficulty.xml
+++ b/app/src/main/res/layout-land/activity_choose_difficulty.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.student.ChooseDifficultyActivity">
+    tools:context=".ui.student.ChooseDifficultyActivity"
+    android:background="@android:color/background_light">
 
 
 
@@ -20,13 +21,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:hint="@string/Difficulty"
-            android:textColor="@android:color/holo_orange_dark"
-            android:textColorHint="@android:color/holo_orange_dark"
+            android:textColor="@android:color/holo_green_dark"
+            android:textColorHint="@android:color/holo_green_dark"
             android:textSize="36sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:fontFamily="cursive"
             android:textAlignment="center"
             android:gravity="center_horizontal" />
     </RelativeLayout>
