--- a/app/src/main/res/layout-land/activity_profile.xml
+++ b/app/src/main/res/layout-land/activity_profile.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@android:color/holo_orange_dark"
+        android:background="@android:color/holo_green_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -21,11 +21,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:enabled="true"
-            android:fontFamily="cursive"
             android:text="@string/Test"
             android:textColor="@color/white"
             android:textSize="42sp"
-            app:backgroundTint="@android:color/holo_orange_dark"
+            app:backgroundTint="@android:color/holo_green_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -37,11 +36,10 @@
             android:layout_weight="1"
             android:baselineAligned="false"
             android:enabled="false"
-            android:fontFamily="cursive"
             android:text="@string/Profile"
-            android:textColor="@android:color/holo_orange_light"
+            android:textColor="@android:color/darker_gray"
             android:textSize="42sp"
-            app:backgroundTint="@android:color/holo_orange_dark"
+            app:backgroundTint="@android:color/holo_green_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
     </LinearLayout>
@@ -58,8 +56,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="cursive"
             android:text="@string/Title"
-            android:textColor="@android:color/holo_orange_dark"
-            android:textSize="36sp"
+            android:textColor="@android:color/holo_green_dark"
+            android:textSize="46sp"
             android:textStyle="bold"
             android:layout_marginTop="25dp"
             android:textAlignment="center"
@@ -80,7 +78,7 @@
             android:layout_centerHorizontal="true"
             android:background="@drawable/round_borders_logout"
             android:hint="@string/action_log_out"
-            android:textColor="@android:color/primary_text_dark"
+            android:textColor="@android:color/white"
             android:textSize="14sp"
             app:background="@drawable/round_borders_logout" />
 
@@ -94,8 +92,7 @@
             android:textSize="22sp"
             android:hint="@string/prompt_email"
             app:layout_constraintHorizontal_bias="1.0"
-            android:fontFamily="cursive"
-            android:textColor="@android:color/primary_text_dark"
+            android:textColor="@android:color/white"
             android:layout_marginStart="@dimen/activity_horizontal_margin" />
 
         <TextView
@@ -108,7 +105,6 @@
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:textSize="22sp"
             app:layout_constraintHorizontal_bias="1.0"
-            android:fontFamily="cursive"
             android:textColor="@android:color/primary_text_dark"
             android:layout_marginEnd="@dimen/activity_horizontal_margin" />
 
@@ -124,8 +120,7 @@
             android:hint="@string/prompt_name"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_below="@id/idEmailHint"
-            android:fontFamily="cursive"
-            android:textColor="@android:color/primary_text_dark"
+            android:textColor="@android:color/white"
             android:layout_marginStart="@dimen/activity_horizontal_margin" />
 
         <TextView
@@ -139,7 +134,6 @@
             android:textSize="22sp"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_below="@id/idEmailProfile"
-            android:fontFamily="cursive"
             android:textColor="@android:color/primary_text_dark"
             android:layout_marginEnd="@dimen/activity_horizontal_margin" />
 
@@ -155,8 +149,7 @@
             android:hint="@string/role_spinner"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_below="@id/idNameHint"
-            android:fontFamily="cursive"
-            android:textColor="@android:color/primary_text_dark"
+            android:textColor="@android:color/white"
             android:layout_marginStart="@dimen/activity_horizontal_margin" />
 
         <TextView
@@ -170,7 +163,6 @@
             android:textSize="22sp"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_below="@id/idNameProfile"
-            android:fontFamily="cursive"
             android:textColor="@android:color/primary_text_dark"
             android:layout_marginEnd="@dimen/activity_horizontal_margin" />
 
