--- a/app/src/main/res/layout-land/activity_reding_test.xml
+++ b/app/src/main/res/layout-land/activity_reding_test.xml
@@ -19,11 +19,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:fontFamily="cursive"
             android:gravity="center_horizontal"
             android:text="@string/Reading"
             android:textAlignment="center"
-            android:textColor="@android:color/holo_orange_dark"
+            android:textColor="@android:color/holo_green_dark"
             android:textSize="36sp"
             android:textStyle="bold"/>
 
@@ -62,7 +61,7 @@
         <TextView
             android:id="@+id/exercise_text"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/profile_separator"
+            android:layout_height="@dimen/profile_separator_landscape"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:gravity="center_horizontal"
