--- a/app/src/main/res/layout-land/activity_vocabulary_test.xml
+++ b/app/src/main/res/layout-land/activity_vocabulary_test.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="cursive"
             android:text="@string/Vocabulary"
-            android:textColor="@android:color/holo_orange_dark"
+            android:textColor="@android:color/holo_green_dark"
             android:textSize="36sp"
             android:textStyle="bold"
             android:layout_marginTop="@dimen/activity_vertical_margin"
