--- a/app/src/main/res/layout/activity_reding_test.xml
+++ b/app/src/main/res/layout/activity_reding_test.xml
@@ -19,11 +19,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:fontFamily="cursive"
             android:gravity="center_horizontal"
             android:text="@string/Reading"
             android:textAlignment="center"
-            android:textColor="@android:color/holo_orange_dark"
+            android:textColor="@android:color/holo_green_dark"
             android:textSize="36sp"
             android:textStyle="bold"/>
 
