--- a/app/src/main/res/layout/activity_speaking_test.xml
+++ b/app/src/main/res/layout/activity_speaking_test.xml
@@ -16,9 +16,8 @@
             android:id="@+id/idTitle3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="cursive"
             android:text="@string/Speaking"
-            android:textColor="@android:color/holo_orange_dark"
+            android:textColor="@android:color/holo_green_dark"
             android:textSize="36sp"
             android:textStyle="bold"
             android:layout_marginTop="@dimen/activity_vertical_margin"
