--- a/app/src/main/res/layout/activity_student_main.xml
+++ b/app/src/main/res/layout/activity_student_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.student.StudentMainActivity"
-    style="?android:attr/buttonBarStyle">
+    style="?android:attr/buttonBarStyle"
+    android:background="@android:color/background_light">
 
     <TextView
         android:id="@+id/idTitle3"
@@ -13,8 +14,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="cursive"
         android:text="@string/Title"
-        android:textColor="@android:color/holo_orange_dark"
-        android:textSize="36sp"
+        android:textColor="@android:color/holo_green_dark"
+        android:textSize="46sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/buttonStart"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,8 +37,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.432"
-        style="?android:attr/buttonBarButtonStyle"
-        android:fontFamily="cursive"/>
+        style="?android:attr/buttonBarButtonStyle"/>
 
     <Button
         android:id="@+id/buttonPrevResults"
@@ -54,15 +54,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonStart"
         app:layout_constraintVertical_bias="0.0"
-        style="?android:attr/buttonBarButtonStyle"
-        android:fontFamily="cursive"/>
+        style="?android:attr/buttonBarButtonStyle"/>
 
     <LinearLayout
         style="?attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@android:color/holo_orange_dark"
+        android:background="@android:color/holo_green_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -73,11 +72,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:enabled="false"
-            android:fontFamily="cursive"
             android:text="@string/Test"
-            android:textColor="@android:color/holo_orange_light"
+            android:textColor="@android:color/darker_gray"
             android:textSize="42sp"
-            app:backgroundTint="@android:color/holo_orange_dark"
+            app:backgroundTint="@android:color/holo_green_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -89,11 +87,10 @@
             android:layout_weight="1"
             android:baselineAligned="false"
             android:enabled="true"
-            android:fontFamily="cursive"
             android:text="@string/Profile"
             android:textColor="@color/white"
             android:textSize="42sp"
-            app:backgroundTint="@android:color/holo_orange_dark"
+            app:backgroundTint="@android:color/holo_green_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
     </LinearLayout>
