--- a/app/src/main/res/layout/activity_show_prev_results.xml
+++ b/app/src/main/res/layout/activity_show_prev_results.xml
@@ -55,7 +55,8 @@
             android:gravity="center_horizontal"
             android:layout_centerInParent="true"
             android:textColor="@android:color/holo_green_dark"
-            android:layout_marginTop="@dimen/activity_vertical_margin"/>
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:textSize="20sp"/>
 
     </RelativeLayout>
 
