--- a/app/src/main/res/layout/activity_listening_test.xml
+++ b/app/src/main/res/layout/activity_listening_test.xml
@@ -54,24 +54,52 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/Header">
-
+        <Button
+            android:id="@+id/playAudio"
+            android:layout_width="64dp"
+            android:layout_height="36dp"
+            android:background="@drawable/round_borders"
+            android:layout_centerHorizontal="true"
+            android:text="@string/playAudio"
+            android:textColor="@color/black"/>
         <TextView
             android:id="@+id/exercise_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:layout_marginTop="48dp"
             android:gravity="center_horizontal"
             android:text="Exercise content, this is a test of the content which will
                 be replaced later with an audio file to be played and
                 proceed with the exercise"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin" />
-
+        <EditText
+            android:id="@+id/answerListening"
+            android:layout_width="164dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:gravity="center_horizontal"
+            android:layout_below="@id/exercise_text"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+        <Button
+            android:id="@+id/nextQuestion"
+            android:layout_width="64dp"
+            android:layout_height="36dp"
+            android:layout_toRightOf="@id/answerListening"
+            android:layout_below="@id/exercise_text"
+            android:background="@drawable/round_borders"
+            android:text="@string/next"
+            android:textColor="@color/black"/>
         <Button
             android:id="@+id/finishTest"
             android:layout_width="64dp"
             android:layout_height="36dp"
-            android:layout_below="@id/exercise_text"
+            android:layout_below="@id/answerListening"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/activity_horizontal_margin"
             android:background="@drawable/round_borders"
