--- a/app/src/main/res/layout/activity_listening_test.xml
+++ b/app/src/main/res/layout/activity_listening_test.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.student.testActivities.ListeningTestActivity"
-    android:background="@android:color/background_light">
+    tools:context=".ui.student.testActivities.ListeningTestActivity">
 
     <RelativeLayout
         android:id="@+id/Header"
@@ -83,6 +82,7 @@
             android:layout_below="@id/exercise_text"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -91,6 +91,7 @@
             android:layout_width="64dp"
             android:layout_height="36dp"
             android:layout_toRightOf="@id/answerListening"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_below="@id/exercise_text"
             android:background="@drawable/round_borders"
             android:text="@string/next"
