--- a/app/src/main/res/layout/activity_student_main.xml
+++ b/app/src/main/res/layout/activity_student_main.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.student.StudentMainActivity"
-    style="?android:attr/buttonBarStyle"
-    android:background="@android:color/background_light">
+    style="?android:attr/buttonBarStyle">
 
     <TextView
         android:id="@+id/idTitle3"
@@ -69,28 +68,27 @@
             android:id="@+id/buttonTest"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:enabled="false"
             android:text="@string/Test"
             android:textColor="@android:color/darker_gray"
             android:textSize="42sp"
-            app:backgroundTint="@android:color/holo_green_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/buttonProfile"
             style="?android:attr/buttonBarButtonStyle"
+            android:background="@android:color/holo_green_dark"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:baselineAligned="false"
             android:enabled="true"
             android:text="@string/Profile"
             android:textColor="@color/white"
             android:textSize="42sp"
-            app:backgroundTint="@android:color/holo_green_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
     </LinearLayout>
