--- a/app/src/main/res/layout/activity_writing_test.xml
+++ b/app/src/main/res/layout/activity_writing_test.xml
@@ -62,11 +62,47 @@
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_centerHorizontal="true"/>
 
+        <TextView
+            android:id="@+id/keyword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:gravity="center_horizontal"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/exercise_text"
+            android:layout_marginTop="@dimen/activity_vertical_margin"/>
+
+        <EditText
+            android:id="@+id/answerWriting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:gravity="center_horizontal"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/keyword"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:inputType="text"/>
+
+        <Button
+            android:id="@+id/nextWriting"
+            android:layout_width="64dp"
+            android:layout_height="36dp"
+            android:layout_below="@id/answerWriting"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:background="@drawable/round_borders"
+            android:textColor="@color/black"
+            android:text="@string/next"/>
+
         <Button
             android:id="@+id/finishTest"
             android:layout_width="64dp"
             android:layout_height="36dp"
-            android:layout_below="@id/exercise_text"
+            android:layout_below="@id/nextWriting"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/activity_horizontal_margin"
             android:background="@drawable/round_borders"
