--- a/app/src/main/res/layout/activity_show_speaking_test.xml
+++ b/app/src/main/res/layout/activity_show_speaking_test.xml
@@ -6,4 +6,57 @@
     android:layout_height="match_parent"
     tools:context=".ui.student.showPrevTests.ShowSpeakingTestActivity">
 
+    <RelativeLayout
+        android:id="@+id/Separator"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/profile_separator"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/idSpeaking"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:hint="@string/speaking_tests"
+            android:textColor="@android:color/holo_green_dark"
+            android:textColorHint="@android:color/holo_green_dark"
+            android:textSize="36sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textAlignment="center"
+            android:gravity="center_horizontal" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/Separator"
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/idSpeakingPastTests"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteX="82dp"
+            android:dividerHeight="2dp"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:textAlignment="center"
+            android:gravity="center_horizontal"/>
+
+        <TextView
+            android:id="@+id/averageSpeaking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/idSpeakingPastTests"
+            android:textAlignment="center"
+            android:gravity="center_horizontal"
+            android:layout_centerInParent="true"
+            android:textColor="@android:color/holo_green_dark"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:textSize="20sp"/>
+
+    </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
